<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <!-- Header -->
    <ImageButton
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/content_description_back_button"
        app:srcCompat="@drawable/ic_backbutton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/tvAddAddressTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/vollkorn"
        android:text="@string/title_add_address"
        android:textColor="@color/textcolor"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/btnBack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btnBack" />

    <!-- Scroll nội dung -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@id/btnBack"
        app:layout_constraintBottom_toTopOf="@id/btnSave">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/edtReceiverName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edittext_background"
                android:fontFamily="@font/nunito_medium"
                android:hint="@string/hint_receiver_name"
                android:padding="12dp"
                android:textColor="@color/textcolor" />

            <EditText
                android:id="@+id/edtPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:background="@drawable/edittext_background"
                android:fontFamily="@font/nunito_medium"
                android:hint="@string/hint_phone_number"
                android:inputType="phone"
                android:padding="12dp"
                android:textColor="@color/textcolor" />

            <EditText
                android:id="@+id/edtDetailCity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:background="@drawable/edittext_background"
                android:fontFamily="@font/nunito_medium"
                android:hint="@string/hint_city"
                android:padding="12dp"
                android:textColor="@color/textcolor" />

            <EditText
                android:id="@+id/edtDetailDistrict"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:background="@drawable/edittext_background"
                android:fontFamily="@font/nunito_medium"
                android:hint="@string/hint_district"
                android:padding="12dp"
                android:textColor="@color/textcolor" />

            <EditText
                android:id="@+id/edtDetailWard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:background="@drawable/edittext_background"
                android:fontFamily="@font/nunito_medium"
                android:hint="@string/hint_ward"
                android:padding="12dp"
                android:textColor="@color/textcolor" />


            <EditText
                android:id="@+id/edtDetail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:background="@drawable/edittext_background"
                android:fontFamily="@font/nunito_medium"
                android:hint="@string/hint_street_address"
                android:padding="12dp"
                android:textColor="@color/textcolor" />

            <CheckBox
                android:id="@+id/checkDefault"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:buttonTint="@color/brown"
                android:fontFamily="@font/nunito_medium"
                android:text="@string/title_default_address"
                android:textColor="@color/textcolor" />
        </LinearLayout>
    </ScrollView>

    <!-- Nút Save -->
    <Button
        android:id="@+id/btnSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:backgroundTint="@color/brown"
        android:fontFamily="@font/nunito_bold"
        android:text="@string/title_confirm_button"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="16dp" />
</androidx.constraintlayout.widget.ConstraintLayout>
